--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,53 @@
+/* Padrão de Cores */
+:root {
+  --color-primary: #09180a;
+  --color-secondary: #6c757d;
+  --color-success: #1b7553;
+  --color-warning: #ffc107;
+  --color-danger: #dc3545;
+  --color-light: #f8f9fa;
+  --color-dark: #212529;
+
+  --color-blue: #0d6efd;
+  --color-purple: #6f42c1;
+  --color-pink: #d63384;
+  --color-red: #dc3545;
+  --color-orange: #fd7e14;
+  --color-yellow: #ffc107;
+  --color-green: #198754;
+  --color-white: #fff;
+  --color-gray: #6c757d;
+  --color-gray-dark: #343a40;
+}
+
 .App {
+  color: var(--color-light);
+}
+
+.display-flex {
+  display: flex;
+}
+
+.text-align-center {
   text-align: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
+.text-decoration-none {
+  text-decoration: none;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
 }
