--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,25 @@
 .text-uppercase {
   text-transform: uppercase;
 }
+
+.padding-v-15 {
+  padding: 15px 0;
+}
+
+.padding-top-15 {
+  padding-top: 15px;
+}
+
+.padding-bottom-15 {
+  padding-bottom: 15px;
+}
+
+.title-1 {
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.title-3 {
+  font-size: 20px;
+  font-weight: 400;
+}
