--- a/src/components/shared/header/header.css
+++ b/src/components/shared/header/header.css
@@ -4,8 +4,9 @@
 .header { 
     background-color: var(--color-success); 
     border-bottom: 1px solid var(--color-light); 
-    width: 100%; 
-} 
+    width: 100%;
+    position: fixed;
+}
 
 .header-container { 
     max-width: 1024px; 
