--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   --color-gray-dark: #343a40;
 }
 
+* {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+}
+
 .App {
   color: var(--color-light);
 }
@@ -28,6 +32,13 @@
   display: flex;
 }
 
+.flex-direction-row {
+  flex-direction: row;
+}
+
+.flex-direction-column {
+  flex-direction: column;
+}
 .text-align-center {
   text-align: center;
 }
@@ -42,6 +53,14 @@
 
 .justify-content-space-between {
   justify-content: space-between;
+}
+
+.justify-content-space-around {
+  justify-content: space-around;
+}
+
+.justify-content-space-evenly {
+  justify-content: space-evenly;
 }
 
 .text-decoration-none {
