--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -1,8 +1,83 @@
+@import url(../../../App.css);
+
+.container-about {
+    width: 100%;
+}
+
 .container-quemsomos {
     padding: 0px 30px;
     padding-top: 70px;
 }
 
+.container-equipe {
+    padding: 20px 0px;
+}
+
 .title-3 {
     line-height: 28px;
+}
+
+.boxCardEquipe {
+    background-color: var(--color-success);
+    color: var(--color-light);
+    padding: 5px 0px;
+    flex-direction: column;
+    box-sizing: border-box;
+    border-radius: 15px;
+    border: 5px solid var(--color-green);
+    width: 300px;
+    height: 400px;
+}
+
+.imagemEquipe {
+    background-color: var(--color-light);
+    min-height: 200px;
+    object-fit: contain;
+    border-radius: 50%;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    padding: 8px;
+    flex: 1;
+}
+
+.nomeEquipe {
+    font-weight: 600;
+    font-size: 18px;
+    margin: 10px 0px;
+}
+
+.profissaoEquipe {
+    margin-bottom: 10px;
+}
+
+.textoEquipe {
+    min-height: 250px;
+    font-size: 14px;
+    padding: 0px 10px;
+    line-height: 20px;
+}
+
+
+
+@media (min-width: 1024px) {
+    .container-about {
+        width: 80%;
+        margin: 0% 10%;
+    }
+}
+
+@media (max-width: 650px) {
+    .container-equipe {
+       flex-direction: column;
+    }
+    .boxCardEquipe {
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 320px) {
+    .boxCardEquipe {
+        width: 250px;
+        height: 400px;
+    }
 }
